pyEQL Changelog
===============

0.4-dev (in progress)
---------------------
 
 - Add ability to calculate dielectric constant based on solution composition for salts
 - Add database entries for the viscosity 'B' parameter for 63 more inorganic ions
 - Improve entry point for running automated tests (#16, thanks Hernan Grecco)
 - Significantly expand documentation of activity correction methods
 - Make output of get_osmotic_coefficient more verbose when Pitzer parameters are not found
 - Fix bug causing activity corrections for non 1:1 salts to be calculated incorrectly (#15)
 - Fix bug causing 'bad operand type' error when calculating osmotic pressure on some systems
 - Fix bug causing ValueError exceptions when a solute has zero concentration
 - Numerous fixes and corrections in the documentation

0.3.1 (2016-02-24)
------------------

 - Fix packaging problems preventing installation from PyPi
 - Fix character encoding issue in Erying_viscosity database file
 
0.3.0 (2016-01-15)
------------------

 - Add method to calculate the total concentration of an element in a solution
 - Add method to automatically generate certain solutions (like seawater)
 - Add method to calculate the hardness of a solution
 - Add method to calculate the alkalinity of a solution
 - Add method to calculate the charge balance of a solution
 - Add method to calculate the Bjerrum length
 - Add database entries for hydrated and ionic radii of 23 common ions
 - Add database entries for the 'B' parameter in the Jones-Dole viscosity equation for 20 common ions
 - Add test suites for solute property methods, hardness, osmotic coefficient, and Debye length
 - Improve logging system to work better when using pyEQL interactively
 - Improved README with graphics and rich formatting
 - Fix bug related to activity and osmotic coefficients for multivalent salts
 - Fix bug related to retrieval of water properties
 - Documentation enhancements and fixes
 
0.2.2 (2015-08-28)
------------------
