@@ -6,6 +6,7 @@ pyEQL Changelog
  
  - Add ability to calculate dielectric constant based on solution composition for salts
  - Add database entries for the viscosity 'B' parameter for 63 more inorganic ions
+ - Add domestic wastewater and human urine to the autogenerate() method
  - Improve entry point for running automated tests (#16, thanks Hernan Grecco)
  - Significantly expand documentation of activity correction methods
  - Make output of get_osmotic_coefficient more verbose when Pitzer parameters are not found
